--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "alpinejs": "^3.15.2",
+        "apexcharts": "^5.3.6",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "flowbite": "^4.0.1",
         "laravel-vite-plugin": "^2.0",
         "tailwindcss": "^4.0.7",
         "vite": "^7.0.4"
